# SoftwareRasterizer

./: !!core_vars.bat  !build.bat  !configure.bat  !run.bat  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
app/: main.cpp
